--- a/main_window.ui
+++ b/main_window.ui
@@ -43,7 +43,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>0</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -91,7 +91,7 @@
      <widget class="QComboBox" name="comboBox_sredi">
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>20</x>
         <y>70</y>
         <width>201</width>
         <height>26</height>
@@ -108,9 +108,9 @@
      <widget class="QLineEdit" name="lineEdit_title_vozrast">
       <property name="geometry">
        <rect>
-        <x>330</x>
+        <x>260</x>
         <y>70</y>
-        <width>311</width>
+        <width>201</width>
         <height>21</height>
        </rect>
       </property>
@@ -118,10 +118,10 @@
      <widget class="QLabel" name="label_sredi">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>70</y>
-        <width>60</width>
-        <height>16</height>
+        <x>108</x>
+        <y>54</y>
+        <width>51</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="font">
@@ -135,7 +135,7 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;среди&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="alignment">
-       <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+       <set>Qt::AlignHCenter|Qt::AlignTop</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_data_provedenia">
@@ -220,7 +220,7 @@
      <widget class="QLabel" name="label_kat_sek">
       <property name="geometry">
        <rect>
-        <x>510</x>
+        <x>551</x>
         <y>150</y>
         <width>81</width>
         <height>16</height>
@@ -475,6 +475,29 @@
         <width>91</width>
         <height>26</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_sredi_2">
+      <property name="geometry">
+       <rect>
+        <x>347</x>
+        <y>54</y>
+        <width>41</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Times New Roman</family>
+        <pointsize>12</pointsize>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;возраст&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
       </property>
      </widget>
     </widget>
@@ -3010,8 +3033,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3187,8 +3210,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3336,8 +3359,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3349,8 +3372,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
@@ -3362,8 +3385,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>219</width>
-       <height>285</height>
+       <width>98</width>
+       <height>28</height>
       </rect>
      </property>
      <attribute name="label">
